[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = ""
authors = ["Ihor Savenko <csigorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
unicorn = "^2.0.1.post1"
beanie = "^1.23.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
